--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" href="img/icon.png"/>
     <title>Borg Consulting</title>
 </head>
-<body>
-    <h1> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum beatae laborum, magni ipsum ex temporibus, provident ipsa hic numquam neque tenetur adipisci, facere fugit dolor. Tempora natus sed exercitationem iure?</h1>
+<body class="background">
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum beatae laborum, dolor. Tempora natus sed exercitationem iure?</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, iure.</p>
 </body>
 </html
