--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Borg Consulting</title>
 </head>
 <body class="background">
-    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum beatae laborum, dolor. Tempora natus sed exercitationem iure?</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, iure.</p>
+    
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
 </body>
 </html
