--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <title>Borg Consulting</title>
 </head>
 <body class="background">
-    
     <div class="container">
-        <p>Lorem ipsum dolor sit amet.</p>
+        <div class="grid">
+            <div><i class="fa fa-facebook"></i></div>
+            <div><i class="fa fa-twitter"></i></div>
+            <div><i class="fa fa-linkedin"></i></div>
+            <div><i class="fa fa-google"></i></div>
+            <div><i class="fa fa-google"></i></div>
+            <div><i class="fa fa-google"></i></div>
+        </div>
     </div>
 </body>
 </html
