--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 </head>
 <body class="background">
     <div class="container">
-        <div class="grid">
-            <div><i class="fa fa-facebook"></i></div>
-            <div><i class="fa fa-twitter"></i></div>
-            <div><i class="fa fa-linkedin"></i></div>
-            <div><i class="fa fa-google"></i></div>
-            <div><i class="fa fa-google"></i></div>
-            <div><i class="fa fa-google"></i></div>
-        </div>
+        <h1><i>Borg</i></h1>
+        <h1><i>Consulting</i></h1>
+        <ul class="grid">
+            <li><a class="home" href="#"><i class="fa fa-home"></i></a></li>
+            <li><a class="contact" href="#"><i class="fa fa-comments"></i></a></li>
+            <li><a class="user" href="#"><i class="fa fa-user"></i></a></li>
+            <li><a class="stats" href="#"><i class="fas fa-chart-bar"></i></a></li> 
+            <li><a class="report" href="#"><i class="fa fa-bug"></i></a></li> 
+            <li><a class="privacy-policy" href="#"><i class="fa fa-book"></i></a></li>  
+        </ul>
     </div>
 </body>
 </html
