--- a/index.html
+++ b/index.html
@@ -1,25 +1,309 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+	<title>Borg Consulting</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://kit.fontawesome.com/091fb7e3b0.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="img/icon.png"/>
-    <title>Borg Consulting</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/animate.css" rel="stylesheet" media="screen">
+    <link href="css/owl.carousel.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet" media="screen">
+
 </head>
-<body class="background">
-    <div class="container">
-        <h1><i>Borg</i></h1>
-        <h1><i>Consulting</i></h1>
-        <ul class="grid">
-            <li><a class="home" href="#"><i class="fa fa-home"></i></a></li>
-            <li><a class="contact" href="#"><i class="fa fa-comments"></i></a></li>
-            <li><a class="user" href="#"><i class="fa fa-user"></i></a></li>
-            <li><a class="stats" href="#"><i class="fas fa-chart-bar"></i></a></li> 
-            <li><a class="report" href="#"><i class="fa fa-bug"></i></a></li> 
-            <li><a class="privacy-policy" href="#"><i class="fa fa-book"></i></a></li>  
-        </ul>
-    </div>
+
+<body data-spy="scroll" data-target="#navbar-scroll">
+
+	<div id="top"></div>
+
+	<!-- NAVIGATION -->
+	<div id="menu">
+		<nav class="navbar-wrapper navbar-default" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-themers">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand site-name" href="#top"><img src="img/placeholder.jpg" alt="logo"></a>
+				</div>
+
+				<div id="navbar-scroll" class="collapse navbar-collapse navbar-themers navbar-right">
+					<ul class="nav navbar-nav">
+						<li><a href="#intro">About</a></li>
+						<li><a href="#feature">Features</a></li>
+						<li><a href="#clients">Clients</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+
+	<!-- /.parallax full screen background image -->
+	<div class="fullscreen landing parallax banner" style="background-image:url('img/bg.jpg');" data-img-width="2000"
+		data-img-height="1325" data-diff="100">
+
+		<div class="overlay">
+			<div class="container">
+				<div class="row">
+
+					<div class="col-md-6">
+
+						<!-- /.main title -->
+						<h1 class="wow fadeInLeft">
+							Borg Consulting
+						</h1>
+
+						<!-- /.header paragraph -->
+						<div class="landing-text wow fadeInLeft">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur pariatur amet ducimus vel est ad temporibus nam nulla, praesentium earum explicabo delectus voluptatem dignissimos ipsa accusamus, quos maxime voluptas quam!</p>
+						</div>
+
+					</div>
+
+					<!-- /.phone image -->
+					<div class="col-md-6">
+						<img src="img/placeholder.jpg" alt="phone"
+							class="header-phone img-responsive wow fadeInRight">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- /.intro section -->
+	<div id="intro">
+		<div class="container">
+			<div class="row">
+
+				<!-- /.feature image -->
+				<div class="col-md-6 feature-2-pic wow fadeInLeft">
+					<img src="img/placeholder.jpg" alt="image" class="img-responsive">
+				</div>
+
+				<!-- /.feature content -->
+				<div class="col-md-6 wow fadeInRight">
+					<h2>What is Borg consulting</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus atque quia voluptates ratione dicta amet assumenda voluptas architecto numquam odit ut maiores, sit mollitia animi, non nulla similique vel totam exercitationem debitis optio adipisci ab! Voluptatem suscipit corporis tempore natus quasi, similique consectetur, nemo rerum iure consequatur harum, sequi dolores.</p>
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+
+	<!-- /.feature section -->
+	<div id="feature">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1 col-sm-12 text-center feature-title">
+
+					<!-- /.feature title -->
+					<h2>What we do</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptatem ipsa earum iusto nisi quod eum fuga aliquam, consequatur labore.</p>
+				</div>
+			</div>
+			<div class="row row-feat">
+
+				<div class="col-md-12">
+
+					<!-- /.feature 1 -->
+					<div class="col-sm-4 feat-list">
+						<i class="fas fa-chalkboard-teacher wow fadeInUp"></i>
+						<div class="inner">
+							<h4>Training</h4>
+							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed pariatur eligendi perferendis aliquid similique saepe optio iste minus maiores unde?</p>
+						</div>
+					</div>
+
+					<!-- /.feature 2 -->
+					<div class="col-sm-4 feat-list">
+						<i class="fas fa-comments wow fadeInUp" data-wow-delay="0.2s"></i>
+						<div class="inner">
+							<h4>Consulting</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur facilis sit perspiciatis libero a consequatur nisi inventore fuga officia iure?</p>
+						</div>
+					</div>
+
+					<!-- /.feature 3 -->
+					<div class="col-sm-4 feat-list">
+						<i class="fas fa-chart-line wow fadeInUp" data-wow-delay="0.4s"></i>
+						<div class="inner">
+							<h4>Growth</h4>
+							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo ad ipsa blanditiis inventore sunt rem officiis vero facere velit dolore!</p>
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- /.reference section -->
+	<div id="clients">
+		<div class="container">
+			<div class="text-center">
+				<h2 class="wow fadeInLeft">Clients</h2>
+				<div class="title-line wow fadeInRight"></div>
+			</div>
+			<div class="row">
+				<div class="col-sm-10 col-sm-offset-1">
+					<div id="owl-clients" class="owl-carousel owl-theme wow fadeInUp">
+
+						<!-- /.clientsmonial 1 -->
+						<div class="clients-item">
+							<div class="client-pic text-center">
+
+								<!-- /.client photo -->
+								<img src="img/placeholder.jpg" alt="client">
+							</div>
+							<div class="box">
+
+								<!-- /.clientsmonial content -->
+								<p class="message text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam corrupti vero explicabo provident libero, sequi nemo repellendus ad. Voluptatibus nemo laudantium velit! Id, sed!</p>
+							</div>
+							<div class="client-info text-center">
+
+								<!-- /.client name -->
+								sum man, <span class="company">Google</span>
+							</div>
+						</div>
+
+						<!-- /.clientsmonial 2 -->
+						<div class="clients-item">
+							<div class="client-pic text-center">
+
+								<!-- /.client photo -->
+								<img src="img/placeholder.jpg" alt="client">
+							</div>
+							<div class="box">
+
+								<!-- /.clientsmonial content -->
+								<p class="message text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque suscipit temporibus velit, veritatis provident magnam itaque autem sequi saepe, eius inventore. Omnis cum quae suscipit?</p>
+							</div>
+							<div class="client-info text-center">
+
+								<!-- /.client name -->
+								sum guy, <span class="company">apple</span>
+							</div>
+						</div>
+
+						<!-- /.clientsmonial 3 -->
+						<div class="clients-item">
+							<div class="client-pic text-center">
+
+								<!-- /.client photo -->
+								<img src="img/placeholder.jpg" alt="client">
+							</div>
+							<div class="box">
+
+								<!-- /.clientsmonial content -->
+								<p class="message text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nobis eveniet quidem illum asperiores natus libero, provident quos non. Eaque expedita in dicta ullam molestias.</p>
+							</div>
+							<div class="client-info text-center">
+
+								<!-- /.client name -->
+								sum dude, <span class="company">Facebook</span>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /.contact section -->
+	<div id="contact">
+		<div class="contact">
+
+			<div class="container">
+				<div class="row contact-row">
+
+
+
+					<!-- /.contact form -->
+					<div class="col-sm-7 contact-right">
+						<form method="POST" id="contact-form" class="form-horizontal" action="contactengine.php"
+							onSubmit="alert('Thank you for your feedback!');">
+							<div class="form-group">
+								<input type="text" name="Name" id="Name" class="form-control wow fadeInUp"
+									placeholder="Name" required />
+							</div>
+							<div class="form-group">
+								<input type="text" name="Email" id="Email" class="form-control wow fadeInUp"
+									placeholder="Email" required />
+							</div>
+							<div class="form-group">
+								<textarea name="Message" rows="20" cols="20" id="Message"
+									class="form-control input-message wow fadeInUp" placeholder="Message"
+									required></textarea>
+							</div>
+							<div class="form-group">
+								<input type="submit" name="submit" value="Submit"
+									class="btn btn-success wow fadeInUp" />
+							</div>
+						</form>
+					</div>
+
+					<!-- /.address and contact -->
+					<div class="col-sm-5 contact-left wow fadeInUp">
+						<h2>Contact Us</h2>
+						<ul class="ul-address">
+							<li>Nachtegaalstraat 13, Breda</li>
+							<li>+31 06 525 122 46</li>
+							<li><a href="#">maxvanlierop05@gmail.com</a></li>
+							<li><a href="www.maxvl.nl">www.maxvl.nl</a></li>
+						</ul>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- /.footer -->
+	<footer id="footer">
+		<div class="container">
+			<div class="col-sm-4 col-sm-offset-4">
+				<!-- /.social links -->
+				<div class="social text-center">
+					<ul>
+						<li><a class="wow fadeInUp" href="https://twitter.com/"  data-wow-delay="0.2s"><i class="fa fa-twitter"></i></a></li>
+						<li><a class="wow fadeInUp" href="https://www.facebook.com/" data-wow-delay="0.2s"><i class="fa fa-facebook"></i></a></li>
+						<li><a class="wow fadeInUp" href="https://google.com/" data-wow-delay="0.4s"><i class="fa fa-google-plus"></i></a></li>
+						<li><a class="wow fadeInUp" href="https://instagram.com/" data-wow-delay="0.6s"><i class="fa fa-instagram"></i></a></li>
+					</ul>
+				</div>
+				<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Max van lierop 2021</div>
+				<a href="#" class="scrollToTop"><i class="fa fa-arrow-circle-o-up"></i></a>
+			</div>
+		</div>
+	</footer>
+
+	<!-- /.javascript files -->
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/custom.js"></script>
+	<script src="js/jquery.sticky.js"></script>
+	<script src="js/wow.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/ekko-lightbox-min.js"></script>
+	<script type="text/javascript">
+		$(document).delegate('*[data-toggle="lightbox"]', 'click', function (event) { event.preventDefault(); $(this).ekkoLightbox(); });
+	</script>
+	<script>
+		new WOW().init();
+	</script>
 </body>
-</html
+
+</html>
