--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
 					<div class="col-sm-5 contact-left wow fadeInUp">
 						<h2>Contact Us</h2>
 						<ul class="ul-address">
-							<li>Nachtegaalstraat 13, Breda</li>
-							<li>+31 06 525 122 46</li>
-							<li><a href="#">maxvanlierop05@gmail.com</a></li>
-							<li><a href="www.maxvl.nl">www.maxvl.nl</a></li>
+							<li>Amersfoort / Breda</li>
+							<li>+31 06 123 456 78</li>
+							<li><a href="#">borg-consulting@gmail.com</a></li>
+							
 						</ul>
 
 					</div>
@@ -283,6 +283,10 @@
 						<li><a class="wow fadeInUp" href="https://google.com/" data-wow-delay="0.4s"><i class="fa fa-google-plus"></i></a></li>
 						<li><a class="wow fadeInUp" href="https://instagram.com/" data-wow-delay="0.6s"><i class="fa fa-instagram"></i></a></li>
 					</ul>
+                    <ul>
+                        <p>KvK-Nummer: 83733590</p>
+                        <p>Borg Consulting B.V.</p>
+                    </ul>
 				</div>
 				<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Max van lierop 2021</div>
 				<a href="#" class="scrollToTop"><i class="fa fa-arrow-circle-o-up"></i></a>
